--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <section class="section-btn">
                     <div class="container button-section">
                         <h1 class="section-under-btn">Effective Solutions for Your Business</h1>
-                        <button class="button" type="button">Order Service</button>
+                        <button class="button" type="button" data-modal-open>Order Service</button>
                     </div>
                 </section>
                 <section class="skills">
@@ -317,5 +317,15 @@
                     </div>
                 </div>
             </footer>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <button type="button" class="madal-close-btn" data-modal-close>
+                        <svg class="modal-btn-icon" width="8" height="8">
+                             <use href="./images/symbol-defs3.svg#icon-modal-btn-1"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <script src="./js/modal.js"></script>
     </body>
 </html>
