--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                     <a href="./index.html" class="header-logo link"><span class="header-web">Web</span>Studio</a>
                     <ul class="header-list list">
                         <li><a class="header-link link" href="./index.html">Studio</a></li>
-                        <li><a class="header-link link" href="./portfolio.html">Portfolio</a></li> 
+                        <li><a class="header-link link active" href="./portfolio.html">Portfolio</a></li> 
                         <li><a class="header-link link" href="./index.html">Contacts</a></li>
                     </ul>
                 </nav>
@@ -53,7 +53,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img9.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Cashless Payment</h3>
                                 <p class="images-after-title">Marketing</p>
