--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <nav class="header-navigation">
                         <a href="./index.html" class="header-logo link"><span class="header-web">Web</span>Studio</a>
                         <ul class="header-list list">
-                            <li><a class="header-link link" href="./index.html">Studio</a></li>
+                            <li><a class="header-link link active" href="./index.html">Studio</a></li>
                             <li><a class="header-link link" href="./portfolio.html">Portfolio</a></li> 
                             <li><a class="header-link link" href="./index.html">Contacts</a></li>
                         </ul>
