--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
             </footer>
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
-                    <button type="button" class="madal-close-btn" data-modal-close>
+                    <button type="button" class="modal-close-btn" data-modal-close>
                         <svg class="modal-btn-icon" width="8" height="8">
-                             <use href="./images/symbol-defs3.svg#icon-modal-btn-1"></use>
+                             <use href="./images/symbol-defs3.svg#icon-close"></use>
                         </svg>
                     </button>
                 </div>
