--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,10 @@
                 <ul class="images-list list">
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img8.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Banking App Interface Concept</h3>
                                 <p class="images-after-title">App</p>
@@ -65,7 +68,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img10.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Meditaion App</h3>
                                 <p class="images-after-title">App</p>
@@ -74,7 +80,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img11.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Taxi Service</h3>
                                 <p class="images-after-title">Marketing</p>
@@ -83,7 +92,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img12.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Screen Illustrations</h3>
                                 <p class="images-after-title">Design</p>
@@ -92,7 +104,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img13.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Online Courses</h3>
                                 <p class="images-after-title">Marketing</p>
@@ -101,7 +116,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img14.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Instagram Stories Concept</h3>
                                 <p class="images-after-title">Design</p>
@@ -110,7 +128,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img15.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Organic Food</h3>
                                 <p class="images-after-title">Web Site</p>
@@ -119,7 +140,10 @@
                     </li>
                     <li class="images-item">
                         <a class="images-link" href="">
+                            <div class="images-top-wrap">
                                 <img src="./images/img16.jpg" width="360" height="300" alt="photo">
+                                <p class="images-top-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="image-text-box">
                                 <h3 class="images-title">Fresh Coffee</h3>
                                 <p class="images-after-title">Web Site</p>
