--- a/portfolio.html
+++ b/portfolio.html
@@ -189,6 +189,15 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-subscribe">
+                <div class="subscribe">
+                    <label for="user-Email" class="subscribe-text-input">Subscribe</label>
+                    <input type="text" class="subscribe-input" name="user-name" placeholder="Email" required>
+                </div>
+                    <button type="button" class="button-subscribe">
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg>Subscribe</button>
+            </div>
         </div>
     </footer>
 </body>
