--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
                     <label for="user-Email" class="subscribe-text-input">Subscribe</label>
                     <input type="text" class="subscribe-input" name="user-name" placeholder="Email" required>
                 </div>
-                    <button type="button" class="button-subscribe">
+                    <button type="submit" class="button-subscribe">
                         <svg class="subscribe-icon" width="24" height="24">
                             <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg>Subscribe</button>
             </div>
