--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" >    <link rel="stylesheet" href="./style.css">
     <title>WebStudio</title>
 </head>
 <body>
@@ -191,12 +191,14 @@
             </div>
             <div class="footer-subscribe">
                 <div class="subscribe">
-                    <label for="user-Email" class="subscribe-text-input">Subscribe</label>
-                    <input type="text" class="subscribe-input" name="user-name" placeholder="Email" required>
-                </div>
-                    <button type="submit" class="button-subscribe">
-                        <svg class="subscribe-icon" width="24" height="24">
-                            <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg>Subscribe</button>
+                    <P class="subscribe-text-input">Subscribe</P>
+                    <form class="subscribe-button-input">
+                        <input type="email" class="subscribe-input" name="user-email" placeholder="Email">
+                        <button type="submit" class="button-subscribe"><span>Subscribe</span>
+                            <svg class="subscribe-icon" width="24" height="20">
+                        <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg></button>
+                    </form>
+                </div>  
             </div>
         </div>
     </footer>
