--- a/index.html
+++ b/index.html
@@ -337,37 +337,40 @@
                     </button>
                     <p class="modal-title">Leave your contacts and we will call you back</p>
                     <form class="modal-form">
-                        <label class="modal-label"><span class="modal-label-text"> Name </span>
-                            <div class="input-wrap">
+                        <label class="modal-label">
+                            <span class="modal-label-text">Name</span>
+                            <span class="input-wrap">
                                 <input type="text" class="modal-input" name="user-name" required>
                                 <span class="modal-input-icon">
                                     <svg class="input-icon" widht="18" height="18">
                                         <use href="./images/symbol-defs3.svg#icon-person"></use></svg></span>
-                            </div>
+                            </span>
                         </label>
-                        <label class="modal-label"><span class="modal-label-text"> Phone </span>
-                            <div class="input-wrap">
+                        <label class="modal-label">
+                            <span class="modal-label-text">Phone</span>
+                            <span class="input-wrap">
                                 <input type="tel" class="modal-input" name="user-Phone" required>
                                 <span class="modal-input-icon">
                                     <svg class="input-icon" widht="18px" height="24px">
                                         <use href="./images/symbol-defs3.svg#icon-phone"></use></svg></span>
-                            </div>
+                            </span>
                         </label>
-                        <label class="modal-label"><span class="modal-label-text"> Email </span>
-                            <div class="input-wrap">
+                        <label class="modal-label">
+                            <span class="modal-label-text"> Email </span>
+                            <span class="input-wrap">
                                 <input type="email" class="modal-input" name="user-Email" required>
                                 <span class="modal-input-icon">
                                     <svg class="input-icon" widht="18px" height="24px">
                                         <use href="./images/symbol-defs3.svg#icon-email"></use></svg></span>
-                            </div>
+                            </span>
                         </label>      
                         <label class="modal-label-comment">
                             <span class="modal-label-text"> Comment </span>
                             <textarea class="modal-textarea" name="user-text" id="user-text" placeholder="Text input"></textarea>
                         </label>        
                         <div class="modal-field">
-                            <input type="checkbox" name="privacy" id="privacy" value="true" class="input-check visually-hidden"/>
-                            <label for="privacy" class="check-text">I accept the terms and conditions of the<span class="privacy"><a href="Privacy Policy">Privacy Policy</a></span></label>
+                            <input type="checkbox" name="privacy" id="privacy" value="true" class="input-check visually-hidden">
+                            <label for="privacy" class="check-text">I accept the terms and conditions of the<span class="privacy"><a href="Privacy-Policy">Privacy Policy</a></span></label>
                         </div>
                             <button type="submit" class="modal-btn">Send</button>
                     </form>
