--- a/index.html
+++ b/index.html
@@ -315,16 +315,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-subscribe">
-                        <div class="subscribe">
-                            <P class="subscribe-text-input">Subscribe</P>
-                            <form class="subscribe-button-input">
-                                <input type="email" class="subscribe-input" name="user-email" placeholder="Email">
-                                <button type="submit" class="button-subscribe"><span>Subscribe</span>
+                    <div class="footer-subscribe" aria-label="footer-user-email">
+                        <p class="subscribe-text-input">Subscribe</P>
+                        <form class="subscribe-button-input">
+                            <input type="email" class="subscribe-input" name="user-email" placeholder="Email">
+                            <button type="submit" class="button-subscribe">Subscribe
                                     <svg class="subscribe-icon" width="24" height="20">
-                                <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg></button>
-                            </form>
-                        </div>  
+                            <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg></button>
+                        </form>  
                     </div>
                 </div>
             </footer>
