--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-subscribe" aria-label="footer-user-email">
+                    <div class="footer-subscribe" >
                         <p class="subscribe-text-input">Subscribe</P>
                         <form class="subscribe-button-input">
-                            <input type="email" class="subscribe-input" name="user-email" placeholder="Email">
+                            <input type="email" class="subscribe-input" name="user-email" placeholder="Email" aria-label="footer-user-email">
                             <button type="submit" class="button-subscribe">Subscribe
                                     <svg class="subscribe-icon" width="24" height="20">
                             <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg></button>
@@ -340,7 +340,7 @@
                             <span class="input-wrap">
                                 <input type="text" class="modal-input" name="user-name" required>
                                 <span class="modal-input-icon">
-                                    <svg class="input-icon" widht="18" height="18">
+                                    <svg class="input-icon" height="18">
                                         <use href="./images/symbol-defs3.svg#icon-person"></use></svg></span>
                             </span>
                         </label>
@@ -349,7 +349,7 @@
                             <span class="input-wrap">
                                 <input type="tel" class="modal-input" name="user-Phone" required>
                                 <span class="modal-input-icon">
-                                    <svg class="input-icon" widht="18px" height="24px">
+                                    <svg class="input-icon" height="24px">
                                         <use href="./images/symbol-defs3.svg#icon-phone"></use></svg></span>
                             </span>
                         </label>
@@ -358,7 +358,7 @@
                             <span class="input-wrap">
                                 <input type="email" class="modal-input" name="user-Email" required>
                                 <span class="modal-input-icon">
-                                    <svg class="input-icon" widht="18px" height="24px">
+                                    <svg class="input-icon" height="24px">
                                         <use href="./images/symbol-defs3.svg#icon-email"></use></svg></span>
                             </span>
                         </label>      
