--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,7 @@
             <div class="footer-subscribe" aria-label="footer-user-email">
                 <p class="subscribe-text-input">Subscribe</P>
                 <form class="subscribe-button-input">
-                    <input type="email" class="subscribe-input" name="user-email" placeholder="Email">
+                    <input type="email" class="subscribe-input" name="user-email" placeholder="Email" aria-label="footer-user-email">
                     <button type="submit" class="button-subscribe">Subscribe
                     <svg class="subscribe-icon" width="24" height="20">
                     <use href="./images/symbol-defs3.svg#icon-Frame"></use></svg></button>
