--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </form>  
                     </div>
                 </div>
-            </footer>--->
+            </footer>
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <button type="button" class="modal-close-btn" data-modal-close>
