--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                     </ul>
-                    <button type="button" class="menu-open" width="32px" height="22px" data-menu-open>
+                    <button type="button" class="menu-open" data-menu-open>
                             <svg class="menu-icon-open">
                                 <use href="./images/symbol-defs3.svg#icon-hamburger"></use></svg>
                     </button>
@@ -40,7 +40,7 @@
             <div class="mob-menu is-hidden" data-menu>
                     <div class="container">
                         <div class="">
-                        <button type="button" class="menu-close" width="8px" height="8px" data-menu-close>
+                        <button type="button" class="menu-close" data-menu-close>
                         <svg class="menu-icon-close">
                             <use href="./images/symbol-defs3.svg#icon-close-2"></use></svg>
                         </button>
