--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                     </ul>
-                    <button type="button" class="menu-open" width="32px" height="22px" data-menu-open>
+                    <button type="button" class="menu-open" data-menu-open>
                         <svg class="menu-icon-open">
                             <use href="./images/symbol-defs3.svg#icon-hamburger"></use></svg>
                     </button>
@@ -39,7 +39,7 @@
                 <div class="mob-menu is-hidden" data-menu>
                     <div class="container">
                         <div class="">
-                        <button type="button" class="menu-close" width="8px" height="8px" data-menu-close>
+                        <button type="button" class="menu-close" data-menu-close>
                         <svg class="menu-icon-close">
                             <use href="./images/symbol-defs3.svg#icon-close-2"></use></svg>
                         </button>
@@ -147,7 +147,8 @@
                         <ul class="hero-list list">
                             <li class="hero-item">
                                 <picture>
-                                <img class="hero-images list" src="./images/img7.jpg" width="264" height="260" alt="photo"><source srcset="./images/img7.jpg 1x,./images/img7-2x.jpg 2x"></picture>
+                                    <source srcset="./images/img7.jpg 1x,./images/img7-2x.jpg 2x">
+                                <img class="hero-images list" src="./images/img7.jpg" width="264" height="260" alt="photo"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Mark Guerrero</h3>
                                     <p class="hero-skills">Product Designer</p>
@@ -181,7 +182,8 @@
                             </li>
                             <li class="hero-item">
                                 <picture>
-                                <img class="hero-images list" src="./images/img6.jpg" width="264" height="260" alt="photo"><source srcset="./images/img6.jpg 1x,./images/img6-2x.jpg 2x"></picture>
+                                    <source srcset="./images/img6.jpg 1x,./images/img6-2x.jpg 2x">
+                                <img class="hero-images list" src="./images/img6.jpg" width="264" height="260" alt="photo"></picture>
                                 <div class="hero-box">
                                     <h2 class="hero-name">Tom Ford</h2>
                                     <p class="hero-skills">Frontend Developer</p>
@@ -215,7 +217,8 @@
                             </li>
                             <li class="hero-item">
                                 <picture>
-                                <img class="hero-images list" src="./images/img5.jpg" width="264" height="260" alt="photo"><source srcset="./images/img5.jpg 1x,./images/img5-2x.jpg 2x"></picture>
+                                    <source srcset="./images/img5.jpg 1x,./images/img5-2x.jpg 2x">
+                                <img class="hero-images list" src="./images/img5.jpg" width="264" height="260" alt="photo"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Camila Garcia</h3>
                                     <p class="hero-skills">Marketing</p>
@@ -249,7 +252,8 @@
                             </li>
                             <li class="hero-item">
                                 <picture>
-                                <img class="hero-images list" src="./images/img4.jpg" width="264" height="260" alt="photo"><source srcset="./images/img4.jpg 1x,./images/img4-2x.jpg 2x"></picture>
+                                    <source srcset="./images/img4.jpg 1x,./images/img4-2x.jpg 2x">
+                                <img class="hero-images list" src="./images/img4.jpg" width="264" height="260" alt="photo"></picture>
                                 <div class="hero-box">
                                     <h3 class="hero-name">Daniel Wilson</h3>
                                     <p class="hero-skills">UI Designer</p>
