--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@
                             <use href="./images/symbol-defs3.svg#icon-close-2"></use></svg>
                         </button>
                         <ul class="mob-header-list list">
-                            <li><a class="mob-header-link link active" href="./index.html">Studio</a></li>
-                            <li><a class="mob-header-link link" href="./portfolio.html">Portfolio</a></li> 
+                            <li><a class="mob-header-link link" href="./index.html">Studio</a></li>
+                            <li><a class="mob-header-link link mob-active" href="./portfolio.html">Portfolio</a></li> 
                             <li><a class="mob-header-link link" href="./index.html">Contacts</a></li>
                         </ul>
                         </div>
