--- a/portfolio.html
+++ b/portfolio.html
@@ -240,7 +240,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-subscribe" aria-label="footer-user-email">
+            <div class="footer-subscribe">
                 <p class="subscribe-text-input">Subscribe</P>
                 <form class="subscribe-button-input">
                     <input type="email" class="subscribe-input" name="user-email" placeholder="Email" aria-label="footer-user-email">
